--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 <!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Adriya - Minimal, Creative, One Page Bootstrap Template</title>
+<title>Mohamed Safouan Besrour - Github Site</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/flexslider.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -46,7 +46,7 @@
       </div>
       <div class="col-md-5 col-sm-6 hero">
         <div class="hero-content">
-          <p>FREE Bootstrap v3.3.5 frame work base minimal portfolio template for presonal use and creative agency.</p>
+          <p>FREE Bootstrap v3.3.5 framework base minimal portfolio template for presonal use and creative agency.</p>
         </div>
         <!-- hero --> 
       </div>
