--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <div class="row">
       <div class="col-md-7 col-sm-6 hero">
         <div class="hero-content">
-          <h1>Mordern, Minimal & Inspiring.</h1>
+          <h1>Mohamed Safouan Besrour</h1>
         </div>
         <!-- hero --> 
       </div>
       <div class="col-md-5 col-sm-6 hero">
         <div class="hero-content">
-          <p>FREE Bootstrap v3.3.5 framework base minimal portfolio template for presonal use and creative agency.</p>
+          <p>My Github Website</p>
         </div>
         <!-- hero --> 
       </div>
