--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
   <div class="container">
     <div class="col-md-6 left">
       <h4>Let's work together</h4>
-      <p> Call: 612.269.8419 OR Email : <a href="mailto:hello@agency.com"> hello@agency.com </a></p>
+      <p> Donate : <a href="bitcoin:1L5CKvG9zVfrDFcvBrso1kJWYgPvwgDYit"> 1L5CKvG9zVfrDFcvBrso1kJWYgPvwgDYit </a></p>
     </div>
     <div class="col-md-6 right">
-      <p>© 2015 All rights reserved. All Rights Reserved<br>
+      <p>© 2016 All Rights Reserved<br>
         Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
     </div>
   </div>
