--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="col-md-7 col-sm-6">
         <div class="col-md-4 col-sm-6 service text-center"> <span class="icon icon-browser"></span>
           <div class="service-content">
-            <h5>Web & Mobile</h5>
+            <h5>Web & SEO</h5>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 service text-center"> <span class="icon icon-trophy"></span>
@@ -147,11 +147,11 @@
 <!-- footer section -->
 <footer class="footer">
   <div class="container">
-    <div class="col-md-6 left">
+    <div class="col-md-6 left text-center">
       <h4>Let's work together</h4>
       <p> Donate : <a href="bitcoin:1L5CKvG9zVfrDFcvBrso1kJWYgPvwgDYit"> 1L5CKvG9zVfrDFcvBrso1kJWYgPvwgDYit </a></p>
     </div>
-    <div class="col-md-6 right">
+    <div class="col-md-6 right text-center">
       <p>© 2016 All Rights Reserved<br>
         Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
     </div>
