--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
           <li>612.269.8419</li>
-          <li><a href="mainlto:hello@phdl.co">hello@agency.com</a></li>
+          <li><a href="https://www.linkedin.com/in/mohamedsafouanbesrour" target="_blank">LinkedIn</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
