--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       <p> Donate : <a href="bitcoin:1L5CKvG9zVfrDFcvBrso1kJWYgPvwgDYit"> 1L5CKvG9zVfrDFcvBrso1kJWYgPvwgDYit </a></p>
     </div>
     <div class="col-md-6 right text-center">
-      <p>© 2016 All Rights Reserved<br>
-        Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
+      <p>© 2016 All Rights Reserved</p>
+      <h4></h4>Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></h4>
     </div>
   </div>
 </footer>
