--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </div>
     <div class="col-md-6 right text-center">
       <p>© 2016 All Rights Reserved</p>
-      <h4></h4>Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></h4>
+      <h4>Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></h4>
     </div>
   </div>
 </footer>
