--- a/index.html
+++ b/index.html
@@ -1,170 +1,77 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="">
-<!--<![endif]-->
-<head>
-<meta charset="utf-8">
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Adriya - Minimal, Creative, One Page Bootstrap Template</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/flexslider.css">
-<link rel="stylesheet" href="css/jquery.fancybox.css">
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/responsive.css">
-<link rel="stylesheet" href="css/animate.min.css">
-<link rel="stylesheet" href="css/font-icon.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-</head>
-<body>
-<!-- header top section -->
-<section class="banner" role="banner">
-  <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="index.html"><img src="images/logo.png" alt=""></a>
-      <nav class="navigation" role="navigation">
-        <ul class="primary-nav">
-          <li>612.269.8419</li>
-          <li><a href="mainlto:hello@phdl.co">hello@agency.com</a></li>
-        </ul>
-      </nav>
-      <a href="#" class="nav-toggle">Menu<span></span></a> </div>
-  </header>
-</section>
-<!-- header top section --> 
-<!-- header content section -->
-<section id="hero" class="section ">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7 col-sm-6 hero">
-        <div class="hero-content">
-          <h1>Mordern, Minimal & Inspiring.</h1>
-        </div>
-        <!-- hero --> 
-      </div>
-      <div class="col-md-5 col-sm-6 hero">
-        <div class="hero-content">
-          <p>FREE Bootstrap v3.3.5 frame work base minimal portfolio template for presonal use and creative agency.</p>
-        </div>
-        <!-- hero --> 
-      </div>
-    </div>
-  </div>
-</section>
-<!-- header content section --> 
-<!-- portfolio grid section -->
-<section id="portfolio">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <hr class="section">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>The Shape of Design</h3>
-            <h4>Branding/Graphic</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/work-1.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/work-2.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/work-3.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/work-4.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/work-5.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/work-6.jpg" class="img-responsive" alt=""> </a> </div>
-    </div>
-  </div>
-</section>
-<!-- portfolio grid section --> 
-<!-- service section -->
-<section id="service" class="service section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5 col-sm-6">
-        <h4>We're expert to create beautiful design & smart technology</h4>
-        <p>Nullam at enim mauris. Donec et nunc ipsum. Suspendi tempus fringilla ipsu Cras metus euismod velit gravida at nunc ipsum.</p>
-      </div>
-      <div class="col-md-7 col-sm-6">
-        <div class="col-md-4 col-sm-6 service text-center"> <span class="icon icon-browser"></span>
-          <div class="service-content">
-            <h5>Web & Mobile</h5>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 service text-center"> <span class="icon icon-trophy"></span>
-          <div class="service-content">
-            <h5>Branding</h5>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 service text-center"> <span class="icon icon-megaphone"></span>
-          <div class="service-content">
-            <h5>Digital Marketing</h5>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- service section --> 
-<!-- footer section -->
-<footer class="footer">
-  <div class="container">
-    <div class="col-md-6 left">
-      <h4>Let's work together</h4>
-      <p> Call: 612.269.8419 OR Email : <a href="mailto:hello@agency.com"> hello@agency.com </a></p>
-    </div>
-    <div class="col-md-6 right">
-      <p>© 2015 All rights reserved. All Rights Reserved<br>
-        Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
-    </div>
-  </div>
-</footer>
-<!-- footer section --> 
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>Mohamed Safouan Besrour | Web Developer</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto" />
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
+		<script type="application/ld+json">
+		{
+		  "@context" : "http://schema.org",
+		  "@type" : "WebSite",
+		  "name" : "Mohamed Safouan Besrour",
+		  "url" : "http://besrourms.github.io"
+		}
+		</script>
+		<script type="application/ld+json">
+		{
+		  "@context": "http://schema.org",
+		  "@type": "Person",
+		  "address": {
+			"@type": "PostalAddress",
+			"addressLocality": "Midoun",
+			"addressRegion": "Djerba",
+			"postalCode": "4116",
+			"streetAddress": "BP 224 Mgarsa"
+		  },
+		  "image": "http://tangorythm.com/images/team/3.jpg",
+		  "jobTitle": "Web Developer",
+		  "name": "Mohamed Safouan Besrour",
+		  "telephone": "(+216) 55 55 70 85",
+		  "url": "http://besrourms.github.io"
+		}
+		</script>
+	</head>
+	<body>
+	<aside class="profile-card">
+		<header>
+			<a href="#">
+				<img src="http://tangorythm.com/images/team/3.jpg" />
+			</a>
+			<h1>Mohamed Safouan Besrour</h1>
+			<h2>Web Developer</h2>
+		</header>
 
-<!-- JS FILES --> 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-<script src="js/bootstrap.min.js"></script> 
-<script src="js/jquery.fancybox.pack.js"></script> 
-<script src="js/retina.min.js"></script> 
-<script src="js/modernizr.js"></script> 
-<script src="js/main.js"></script>
-</body>
+		<div class="profile-bio">
+			<p>WE'RE EXPERT TO CREATE BEAUTIFUL DESIGN & SMART TECHNOLOGY</p>
+		</div>
+
+		<!-- some social links to show off -->
+		<ul class="profile-social-links">
+	
+			<!-- LinkedIn  -->
+			<li>
+				<a href="http://tn.linkedin.com/in/MohamedSafouanBesrour" class="linkedin" target="_blank" rel="external">
+				   <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414" fill="currentColor"><path d="M13.632 13.635h-2.37V9.922c0-.886-.018-2.025-1.234-2.025-1.235 0-1.424.964-1.424 1.96v3.778h-2.37V6H8.51V7.04h.03c.318-.6 1.092-1.233 2.247-1.233 2.4 0 2.845 1.58 2.845 3.637v4.188zM3.558 4.955c-.762 0-1.376-.617-1.376-1.377 0-.758.614-1.375 1.376-1.375.76 0 1.376.617 1.376 1.375 0 .76-.617 1.377-1.376 1.377zm1.188 8.68H2.37V6h2.376v7.635zM14.816 0H1.18C.528 0 0 .516 0 1.153v13.694C0 15.484.528 16 1.18 16h13.635c.652 0 1.185-.516 1.185-1.153V1.153C16 .516 15.467 0 14.815 0z" fill-rule="nonzero"/></svg>
+				</a>
+			</li>
+			
+			<!-- Github -->
+			<li>
+				<a href="https://github.com/BesrourMS" class="github" target="_blank" rel="external">
+					<svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414" fill="currentColor"><path d="M8 0C3.58 0 0 3.582 0 8c0 3.535 2.292 6.533 5.47 7.59.4.075.547-.172.547-.385 0-.19-.007-.693-.01-1.36-2.226.483-2.695-1.073-2.695-1.073-.364-.924-.89-1.17-.89-1.17-.725-.496.056-.486.056-.486.803.056 1.225.824 1.225.824.714 1.223 1.873.87 2.33.665.072-.517.278-.87.507-1.07-1.777-.2-3.644-.888-3.644-3.953 0-.873.31-1.587.823-2.147-.083-.202-.358-1.015.077-2.117 0 0 .672-.215 2.2.82.638-.178 1.323-.266 2.003-.27.68.004 1.364.092 2.003.27 1.527-1.035 2.198-.82 2.198-.82.437 1.102.163 1.915.08 2.117.513.56.823 1.274.823 2.147 0 3.073-1.87 3.75-3.653 3.947.287.246.543.735.543 1.48 0 1.07-.01 1.933-.01 2.195 0 .215.144.463.55.385C13.71 14.53 16 11.534 16 8c0-4.418-3.582-8-8-8"/></svg>
+				</a>
+			</li>
+			
+			<!-- Bitcoin -->
+			<li>
+				<a href="bitcoin:1L5CKvG9zVfrDFcvBrso1kJWYgPvwgDYit" class="bitcoin" rel="external">
+				   <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414"  fill="currentColor"><path d="M15.76 9.936c-1.068 4.286-5.41 6.894-9.696 5.825C1.78 14.694-.83 10.35.24 6.066 1.308 1.78 5.65-.83 9.934.238c4.287 1.07 6.895 5.41 5.827 9.698zM11.527 6.86c.16-1.064-.65-1.637-1.76-2.02l.36-1.44-.878-.22-.35 1.405c-.23-.058-.467-.112-.703-.166l.353-1.414-.878-.22-.36 1.443c-.19-.045-.378-.088-.56-.133v-.005L5.54 3.79l-.233.938s.65.15.637.158c.356.09.42.324.41.51l-.986 3.95c-.043.11-.154.27-.402.21.01.013-.638-.16-.638-.16l-.436 1.006 1.142.284c.213.054.42.11.626.162l-.363 1.46.877.217.36-1.443c.24.065.472.125.7.182l-.36 1.436.878.22.364-1.457c1.497.283 2.622.17 3.096-1.185.382-1.09-.02-1.72-.807-2.13.574-.13 1.006-.508 1.12-1.288zM9.52 9.673c-.27 1.09-2.106.5-2.7.353l.48-1.933c.596.15 2.504.443 2.22 1.58zm.272-2.83c-.247.993-1.775.49-2.27.366l.436-1.754c.496.124 2.092.354 1.834 1.388z"/></svg>
+				</a>
+			</li>
+		</ul>
+	</aside>
+  </body>
 </html>
