--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Mohamed Safouan Besrour | Web Developer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="google-site-verification" content="fAAWDRu4cZNuH_KHi74aYyUpCCCrZzCgFClv_9UxRg8" />
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto" />
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
