--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		  "@type": "Person",
 		  "address": {
 			"@type": "PostalAddress",
+			"addressCountry": "Tunisia",
 			"addressLocality": "Midoun",
 			"addressRegion": "Djerba",
 			"postalCode": "4116",
@@ -40,7 +41,7 @@
 	<aside class="profile-card">
 		<header>
 			<a href="#">
-				<img src="http://tangorythm.com/images/team/3.jpg" />
+				<img src="http://tangorythm.com/images/team/3.jpg" alt="Mohamed Safouan Besrour" width="119px" height="119px"/>
 			</a>
 			<h1>Mohamed Safouan Besrour</h1>
 			<h2>Web Developer</h2>
