--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Mohamed Safouan Besrour | Web Developer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="google-site-verification" content="fAAWDRu4cZNuH_KHi74aYyUpCCCrZzCgFClv_9UxRg8" />
+		<meta name="msvalidate.01" content="02B787ED4CBF678EE893DFCA2B9E5CAE" />
 		<link hreflang="x-default" href="http://besrourms.github.io" rel="alternate" />
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto" />
 		<link rel="stylesheet" href="css/normalize.css">
