--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<aside class="profile-card">
 			<header>
 				<a href="#">
-					<img src="http://tangorythm.com/images/team/3.jpg" alt="Mohamed Safouan Besrour" width="119" height="119"/>
+					<img src="profil.jpg" alt="Mohamed Safouan Besrour" width="119" height="119"/>
 				</a>
 				<h1>Mohamed Safouan Besrour</h1>
 				<h2>Web Developer</h2>
