--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="google-site-verification" content="fAAWDRu4cZNuH_KHi74aYyUpCCCrZzCgFClv_9UxRg8" />
 		<meta name="msvalidate.01" content="02B787ED4CBF678EE893DFCA2B9E5CAE" />
 		<meta name='yandex-verification' content='5e4ae0e06bb2a0c4' />
+		<meta name="theme-color" content="#ABA0AC">
 		<link rel='shortcut icon' type='image/ico' href='favicon.ico'>
 		<link hreflang="x-default" href="http://besrourms.github.io" rel="alternate" />
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto" />
