Add Europa Font

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name='yandex-verification' content='5e4ae0e06bb2a0c4' />
 		<link rel='shortcut icon' type='image/ico' href='favicon.ico'>
 		<link hreflang="x-default" href="http://besrourms.github.io" rel="alternate" />
-		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto" />
+		<link rel="stylesheet" href="//use.typekit.net/moy8qkv.css" />
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
