--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
 				</li>
 			</ul>
 		</aside>
+		<script data-name="BMC-Widget" src="https://cdn.buymeacoffee.com/widget/1.0.0/prod/widget.prod.min.js" data-id="besrour" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting. You can now buy me a coffee!" data-color="#5F7FFF" data-position="right" data-x_margin="18" data-y_margin="18"></script>
 	 </body>
 </html>
